--- a/index.html
+++ b/index.html
@@ -2,57 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.1">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div id="gm_sc">
-    <h1>문제</h1>
-    <b>
-      <p id="hint"></p>
-    </b>
-      <div class="input-row">
-          <input class="input" maxlength="1">
-          <input class="input" maxlength="1">
-          <input class="input" maxlength="1">
-          <input class="input" maxlength="1">
-      </div>
-      <div class="input-row">
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-      </div>
-      <div class="input-row">
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-      </div>
-      <div class="input-row">
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-      </div>
-      <div class="input-row">
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-      </div>
-      <div class="input-row">
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-          <input class="input" maxlength="1" disabled>
-      </div>
-      <div id="submit_btn">
-          <button id="submit_btn">제출</button>
-      </div>
-  </div>
-
-    <script src="script.js"></script>
+    <div id="title">
+        <h1>난이도</h1>   
+    </div>
+    
+    <div id="option">
+        <div id="option_1">
+            <b>
+                <button onclick="location.href = 'easy.html'">EASY</button>
+            </b>
+        </div>
+        <div id="option_2">
+            <b>
+                <button onclick="location.href = '#'">HARD</button>
+            </b>
+        </div>
+    </div>
 </body>
 </html>
