--- a/hard.html
+++ b/hard.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.1">
     <link rel="stylesheet" href="style.css">
-    <title>난이도 - 쉬움</title>
+    <title>난이도 - 어려움</title>
 </head>
 <body>
   <div id="gm_sc">
-    <h1>문제 <br><h2>쉬움</h2></h1>
+    <h1>문제 <br><h2>어려움</h2></h1>
     <b>
       <p id="hint"></p>
     </b>
@@ -53,7 +53,7 @@
       </div>
   </div>
 
-    <script src="JS/easy_problems.js"></script>
+    <script src="JS/hard_problems.js"></script>
     <script src="JS/gm_sys.js"></script>
 </body>
 </html>
