--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>난이도 선택</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
         </div>
         <div id="option_2">
             <b>
-                <button onclick="location.href = '#'">HARD</button>
+                <button onclick="location.href = 'hard.html'">HARD</button>
             </b>
         </div>
     </div>
