--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>난이도 선택</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="option.css">
 </head>
 <body>
     <div id="title">
