--- a/hard.html
+++ b/hard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="phone.css">
     <title>난이도 - 어려움</title>
 </head>
 <body>
